test/snapshot/negative/strict_mode_enforcer/compile.hxml
-cp .
-main Main
-lib reflaxe.elixir

-D reflaxe_elixir_strict
-D elixir_output=out
--no-output

